# gap_foundry

./: .gitignore  DEPLOY.md  Dockerfile  README.md  fly.toml  pyproject.toml  railway.json  test_input.json
src/gap_foundry/: api.py  crew.py  input_refiner.py  main.py
src/gap_foundry/config/: agents.yaml  pregate_rules.yaml  tasks.yaml
test_inputs/: test_a_hold.json  test_b_q0fail.json  test_c_go.json
web/: README.md  env.example  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/validate/[runId]/: page.tsx
web/src/components/: idea-form.tsx
web/src/lib/: api.ts
