[project]
name = "gap_foundry"
version = "0.1.0"
description = "gap-foundry using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pyyaml"
]

[project.scripts]
gap_foundry = "gap_foundry.main:run"
run_crew = "gap_foundry.main:run"
train = "gap_foundry.main:train"
replay = "gap_foundry.main:replay"
test = "gap_foundry.main:test"
run_with_trigger = "gap_foundry.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
